--- a/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
@@ -2,6 +2,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="splash_progress_width">100dp</dimen>
-    <dimen name="splash_progress_height">100dp</dimen>
+    <dimen name="dialog_progress_width">100dp</dimen>
+    <dimen name="dialog_progress_height">100dp</dimen>
 </resources>
