--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_login.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,35 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:background="@drawable/image_test"
     tools:context="com.tukkeendoo.app.view.login.LoginActivity">
 
-</RelativeLayout>
+    <!-- User name -->
+
+    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <AutoCompleteTextView android:id="@+id/text_user_name" android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:hint="@string/textUsername"
+            android:inputType="textEmailAddress" android:maxLines="1"
+            android:singleLine="true" />
+    </android.support.design.widget.TextInputLayout>
+
+    <!-- Password -->
+    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText android:id="@+id/text_password" android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:hint="@string/textPassword"
+            android:inputType="textPassword" android:maxLines="1"
+            android:singleLine="true" />
+    </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/login_button"
+        android:id="@+id/login_button"
+        android:layout_gravity="center"
+        android:layout_below="@id/text_password"/>
+
+</LinearLayout>
