--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_splash.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_splash.xml
@@ -3,26 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".view.splash.SplashActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_app_name"
-        android:text="@string/app_name"
-        android:gravity="center"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send request"
-        android:id="@+id/test_button"
-        android:layout_gravity="center"
-        android:layout_below="@id/text_app_name"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/container"
+        android:background="@drawable/image_test"
+        android:scaleType="centerCrop">
+    </LinearLayout>
 
 </LinearLayout>
