--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_home.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_home.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/text_welcome"
-        android:gravity="center"/>
+        android:textSize="@dimen/police_size"
+        android:layout_gravity="center"/>
 
 </RelativeLayout>
