--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_login.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_login.xml
@@ -3,39 +3,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/activity_padding"
     android:orientation="vertical"
-    android:background="@drawable/image_test"
+    android:background="@color/tukkeeVert"
     tools:context="com.tukkeendoo.app.view.login.LoginActivity">
 
-    <!-- User name -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_user_informer"
+        android:background="@color/tukkeeOrange"
+        android:visibility="gone"/>
 
-    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <AutoCompleteTextView android:id="@+id/text_user_name" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:hint="@string/textUsername"
-            android:inputType="textEmailAddress" android:maxLines="1"
-            android:singleLine="true" />
-    </android.support.design.widget.TextInputLayout>
+    <include layout="@layout/separator" />
 
-    <!-- Password -->
-    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText android:id="@+id/text_password" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:hint="@string/textPassword"
-            android:inputType="textPassword" android:maxLines="1"
-            android:singleLine="true" />
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_button"
-        android:id="@+id/login_button"
-        android:layout_gravity="center"
-        android:layout_below="@id/text_password"/>
+        android:id="@+id/app_logo"
+        android:src="@drawable/logo"
+        android:layout_gravity="center"/>
+
+    <include layout="@layout/separator"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+
+        <!-- User name -->
+
+        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <AutoCompleteTextView android:id="@+id/text_user_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/white"
+                android:hint="@string/textUsername"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/police_size"
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <!-- Password -->
+        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText android:id="@+id/text_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColorHint="@color/white"
+                android:hint="@string/textPassword"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="@dimen/police_size"
+                android:layout_below="@id/text_user_name"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <include layout="@layout/separator"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/login_button"
+            android:textSize="@dimen/police_size"
+            android:id="@+id/login_button"
+            android:textColor="@color/white"
+            android:background="@color/tukkeeDarkVert"
+            android:layout_gravity="center"
+            android:layout_below="@id/text_password"/>
+
+    </LinearLayout>
+
+    <include layout="@layout/separator"/>
+    <include layout="@layout/separator"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sin_up"
+            android:id="@+id/register_button"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/police_size"
+            android:background="@color/tukkeeVert"
+            android:layout_gravity="center"/>
+
+        <include layout="@layout/separator"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot_my_password"
+            android:id="@+id/forgot_password_button"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:background="@color/tukkeeVert"
+            android:layout_gravity="center"/>
+
+        <include layout="@layout/separator"/>
+
+    </LinearLayout>
 
 </LinearLayout>
