--- a/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#004d40</color>
     <color name="colorAccent">#f44336</color>
     <color name="gray">#c7c9c9</color>
-    <color name="tukkeendoo">#009688</color>
+    <color name="white">#ffffff</color>
+    <color name="tukkeeVert">#009688</color>
+    <color name="tukkeeDarkVert">#004d40</color>
+    <color name="tukkeeOrange">#f44336</color>
 </resources>
