--- a/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="dialog_progress_width">100dp</dimen>
     <dimen name="dialog_progress_height">100dp</dimen>
+    <dimen name="police_size">16sp</dimen>
+    <dimen name="separator_size">20dp</dimen>
+    <dimen name="activity_padding">16dp</dimen>
 </resources>
