--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_main.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_main.xml
@@ -5,19 +5,19 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:context="com.tukkeendoo.app.views.main.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/app_bar_layout"
-        android:minHeight="?actionBarSize"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/app_bar_layout"-->
+        <!--android:minHeight="?actionBarSize"-->
+        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <!--<android.support.v7.widget.Toolbar android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
 
         <!--<android.support.design.widget.TabLayout-->
@@ -25,16 +25,16 @@
             <!--android:layout_height="wrap_content"-->
             <!--android:id="@+id/tabs_layout"/>-->
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 
 
-    <include layout="@layout/main_content_view"
+    <include layout="@layout/main_app_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_menu_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/main_nav_menu_header"
