--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_main.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_main.xml
@@ -8,29 +8,9 @@
     tools:openDrawer="start"
     tools:context="com.tukkeendoo.app.views.main.MainActivity">
 
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/app_bar_layout"-->
-        <!--android:minHeight="?actionBarSize"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
-
-        <!--<android.support.v7.widget.Toolbar android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-
-        <!--<android.support.design.widget.TabLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/tabs_layout"/>-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
-
-
-    <include layout="@layout/main_app_bar"
+    <include layout="@layout/main_content_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_menu_view"
@@ -39,7 +19,7 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/main_nav_menu_header"
         app:menu="@menu/navigation_menu"
-        android:background="@drawable/shape_nav_menu"
-        app:itemTextColor="@color/white"/>
+        app:itemTextColor="@color/black"/>
+
 
 </android.support.v4.widget.DrawerLayout>
