--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/main_nav_menu_header.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/main_nav_menu_header.xml
@@ -4,11 +4,27 @@
     android:layout_height="@dimen/nav_menu_header_height"
     android:background="@drawable/shape_nav_menu"
     android:orientation="vertical"
-    android:gravity="bottom">
+    android:gravity="start">
 
-    <ImageView android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/ic_contact_picture_holo_light"
-        android:id="@+id/photo_profil" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <ImageView android:layout_width="@dimen/profile_photo_width"
+            android:layout_height="@dimen/profile_photo_height"
+            android:src="@drawable/ic_contact_picture_holo_light"
+            android:id="@+id/photo_profil"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_profile_user_name"
+            android:layout_below="@id/photo_profil"
+            android:text="Fallou FALL"/>
+
+    </LinearLayout>
 
 </LinearLayout>
