--- a/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="tukkeeMediumGreen">#00735f</color>
     <color name="tukkeeDarkGreen">#004d40</color>
     <color name="tukkeeOrange">#f44336</color>
+    <color name="black">#000000</color>
 </resources>
