--- a/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
@@ -12,4 +12,8 @@
     <dimen name="user_informer_padding">5dp</dimen>
     <dimen name="nav_menu_header_height">140dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="home_top_margin">100dp</dimen>
+    <dimen name="search_button_width">150dp</dimen>
+    <dimen name="profile_photo_width">100dp</dimen>
+    <dimen name="profile_photo_height">100dp</dimen>
 </resources>
