--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/main_content_view.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/main_content_view.xml
@@ -21,7 +21,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:title="@string/app_name"
+            android:title="@string/search_a_trip"
             android:titleTextColor="@color/white"/>
 
         <android.support.design.widget.TabLayout
@@ -35,8 +35,8 @@
         android:id = "@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/image_test"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="@drawable/route"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
