--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_setting.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_setting.xml
@@ -8,6 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tukkeendoo.app.views.setting.SettingActivity">
+    tools:context="com.tukkeendoo.app.views.setting.SettingActivity"
+    android:gravity="center">
+
+    <Button
+        android:layout_width="@dimen/search_button_width"
+        android:layout_height="wrap_content"
+        android:text="@string/disconnect"
+        android:background="@drawable/orange_button"
+        android:id="@+id/logout_button"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
