--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_splash.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/activity_splash.xml
@@ -3,34 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".view.SplashActivity">
+    android:background="@color/tukkeeVert"
+    android:gravity="center"
+    tools:context=".views.splash.SplashActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text_app_name"
-        android:text="@string/app_name"
-        android:gravity="center"/>
+        android:src="@drawable/logo"
+        android:layout_gravity="center"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send request"
-        android:id="@+id/test_button"
-        android:layout_gravity="center"
-        android:layout_below="@id/text_app_name"/>
-
-    <ProgressBar
-        android:layout_width="@dimen/splash_progress_width"
-        android:layout_height="@dimen/splash_progress_height"
-        android:id="@+id/splash_progress"
-        android:layout_gravity="center"
-        android:visibility="gone"
-        android:layout_below="@id/test_button"/>
 
 </LinearLayout>
