--- a/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#004d40</color>
+    <color name="colorAccent">#f44336</color>
+    <color name="gray">#c7c9c9</color>
+    <color name="white">#ffffff</color>
+    <color name="tukkeeVert">#009688</color>
+    <color name="tukkeeLightGreen">#00ffe8</color>
+    <color name="tukkeeMediumGreen">#00735f</color>
+    <color name="tukkeeDarkGreen">#004d40</color>
+    <color name="tukkeeOrange">#f44336</color>
+    <color name="black">#000000</color>
 </resources>
