--- a/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
@@ -2,6 +2,21 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="splash_progress_width">100dp</dimen>
-    <dimen name="splash_progress_height">100dp</dimen>
+    <dimen name="dialog_progress_width">100dp</dimen>
+    <dimen name="dialog_progress_height">100dp</dimen>
+    <dimen name="police_size">16sp</dimen>
+    <dimen name="separator_size">20dp</dimen>
+    <dimen name="activity_padding">16dp</dimen>
+    <dimen name="picker_height">90dp</dimen>
+    <dimen name="time_picker_padding">2dp</dimen>
+    <dimen name="user_informer_padding">5dp</dimen>
+    <dimen name="nav_menu_header_height">140dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="home_top_margin">100dp</dimen>
+    <dimen name="search_button_width">150dp</dimen>
+    <dimen name="profile_photo_width">100dp</dimen>
+    <dimen name="profile_photo_height">100dp</dimen>
+    <dimen name="search_button_border_width">155dp</dimen>
+    <dimen name="search_button_border_height">45dp</dimen>
+    <dimen name="default_button_height">40dp</dimen>
 </resources>
