- yok ci saxum xibaar yi - jubanti yu deung yi - waruway yi

--- a/Tukkeendoo/tukkeendoo/src/main/res/layout/trip_search_input_layout.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/layout/trip_search_input_layout.xml
@@ -40,7 +40,7 @@
         android:layout_width="@dimen/search_button_border_width"
         android:layout_height="@dimen/search_button_border_height"
         android:layout_gravity="center"
-        android:background="@drawable/orange_button">
+        android:background="@drawable/button">
 
         <Button
             android:layout_width="@dimen/search_button_width"
