--- a/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
+++ b/Tukkeendoo/tukkeendoo/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="search_button_border_width">155dp</dimen>
     <dimen name="search_button_border_height">45dp</dimen>
     <dimen name="default_button_height">40dp</dimen>
+    <dimen name="vehicle_item_height">80dp</dimen>
 </resources>
